--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@ build/
 develop-eggs/
 dist/
 downloads/
-uploads/
+source/uploads/
 eggs/
 .eggs/
 lib/
@@ -27,6 +27,7 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
+.volumes/
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
@@ -160,3 +161,6 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 .idea/
+source/webapp/static/excel
+source/custom_admin/static/excel
+ssl/
